fix: refactor query, recommend api